# qbittorrent-material

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  HANDOFF.md  README.md  ROADMAP.md  run.cmd  run.ps1  run.sh  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/app/: appcontroller.cpp  appcontroller.h  application.cpp  application.h  desktopintegration.cpp  desktopintegration.h
src/base/: logger.cpp  logger.h  logging.cpp  logging.h  preferences.cpp  preferences.h  settingsstorage.cpp  settingsstorage.h  settingvalue.h  tagset.h  torrentfileguard.cpp  torrentfileguard.h  torrentfileswatcher.cpp  torrentfileswatcher.h  types.h  unicodestrings.h  version.h
src/base/bittorrent/: addtorrentparams.cpp  addtorrentparams.h  categoryoptions.cpp  categoryoptions.h  downloadpriority.h  infohash.cpp  infohash.h  peerinfo.cpp  peerinfo.h  resumedatastorage.cpp  resumedatastorage.h  session.h  sessionimpl.cpp  sessionimpl.h  sessionstatus.h  sharelimits.h  sslparameters.h  torrent.h  torrentcontenthandler.cpp  torrentcontenthandler.h  torrentcontentlayout.h  torrentcreator.cpp  torrentcreator.h  torrentdescriptor.cpp  torrentdescriptor.h  torrentimpl.cpp  torrentimpl.h  torrentinfo.cpp  torrentinfo.h  trackerentry.h  trackerentrystatus.h
src/base/git/: gitrepositorystore.cpp  gitrepositorystore.h
src/base/net/: dnsupdater.h  downloadmanager.cpp  downloadmanager.h  geoipmanager.h  portforwarder.h  proxyconfigurationmanager.h  proxytype.h  reverseresolution.h  smtpclient.h  smtpencryptiontype.h
src/base/rss/: rss_article.h  rss_autodownloader.cpp  rss_autodownloader.h  rss_autodownloadrule.cpp  rss_autodownloadrule.h  rss_feed.cpp  rss_feed.h  rss_folder.h  rss_item.h  rss_session.cpp  rss_session.h
src/base/search/: searchdownloadhandler.h  searchhandler.cpp  searchhandler.h  searchpluginmanager.cpp  searchpluginmanager.h
src/base/torrentjournal/: torrentjournal.cpp  torrentjournal.h  torrentjournalop.cpp  torrentjournalop.h  torrentjournalserializer.cpp  torrentjournalserializer.h  torrentundomanager.cpp  torrentundomanager.h
src/base/utils/: compare.h  misc.cpp  misc.h  net.h  password.h  string.cpp  string.h
src/base/utils/fs/: path.h
src/base/utils/i18n/: funnytranslator.h
src/quick/: logbridge.cpp  logbridge.h
src/quick/controllers/: addtorrentcontroller.cpp  addtorrentcontroller.h  addtorrentparamscontroller.h  executionlogcontroller.h  guiaddtorrentmanager.h  journalcontroller.cpp  journalcontroller.h  optionscontroller.cpp  optionscontroller.h  preferencescontroller.cpp  preferencescontroller.h  propertiescontroller.cpp  propertiescontroller.h  rsscontroller.cpp  rsscontroller.h  ruleeditorcontroller.h  searchcontroller.cpp  searchcontroller.h  sessioncontroller.cpp  sessioncontroller.h  speedlimitcontroller.h  statisticscontroller.h  torrentcreatorcontroller.cpp  torrentcreatorcontroller.h  transfercontroller.cpp  transfercontroller.h
src/quick/i18n/: funnytranslator.cpp  funnytranslator.h  i18ncontroller.cpp  i18ncontroller.h
src/quick/models/: advancedsettingsmodel.h  autodownloadrulesmodel.h  categoryfiltermodel.h  cookiesmodel.h  journalhistorymodel.cpp  journalhistorymodel.h  logmodels.cpp  logmodels.h  peerlistmodel.h  rssarticlemodel.h  rssfeedtreemodel.h  searchpluginsmodel.h  searchresultsmodel.h  speedplotmodel.h  statusfiltermodel.h  tagfiltermodel.h  torrentcontentmodel.cpp  torrentcontentmodel.h  torrentfilter.h  torrentfilterproxymodel.cpp  torrentfilterproxymodel.h  trackerlistmodel.cpp  trackerlistmodel.h  trackersfiltermodel.h  trackerstatusfiltermodel.h  transferlistmodel.cpp  transferlistmodel.h  watchedfoldersmodel.h  webseedlistmodel.h  workspacemanager.cpp  workspacemanager.h
src/quick/painteditems/: piecesbaritem.cpp  piecesbaritem.h
src/quick/qml/: Main.qml
src/quick/qml/addtorrent/: AddNewTorrentDialog.qml
src/quick/qml/categories/: CategoryDialog.qml
src/quick/qml/components/: AddTorrentParamsForm.qml  CheckableGroupBox.qml  CollapsibleSection.qml  ColumnHeaderMenu.qml  ConfirmDialog.qml  DataTable.qml  FilterPatternFormatMenu.qml  FilterTextField.qml  IconButton.qml  LabeledField.qml  MDIcon.qml  MaterialCard.qml  PathComboField.qml  PathField.qml  ProgressCell.qml  SectionHeader.qml  SharedShareLimitsForm.qml  Snackbar.qml  SpeedSpinBox.qml  TextInputDialog.qml  TriStateComboField.qml  qmldir
src/quick/qml/content/: BatchRenameDialog.qml  ContentPriorityDelegate.qml  ContentTreeContextMenu.qml  TorrentContentTree.qml
src/quick/qml/dialogs/: AboutDialog.qml  CookiesDialog.qml  DeletionConfirmationDialog.qml  DownloadFromURLDialog.qml  PreviewSelectDialog.qml  ShutdownConfirmDialog.qml  SpeedLimitDialog.qml  StatisticsDialog.qml  TorrentCreatorDialog.qml  TrackerEntriesDialog.qml
src/quick/qml/log/: BlockedIPsView.qml  ExecutionLogTab.qml  GeneralLogView.qml  LogContextMenu.qml
src/quick/qml/mainwindow/: AppMenuBar.qml  AppNavigationSidebar.qml  AppStatusBar.qml  AppToolBar.qml  CentralTabs.qml  ExitConfirmationDialog.qml  LockPasswordDialog.qml  SystemTrayMenu.qml  ToolbarContextMenu.qml  UILockScreen.qml
src/quick/qml/options/: APIKeyConfirmDialog.qml  AdvancedPage.qml  BanListOptionsDialog.qml  BehaviorPage.qml  BitTorrentPage.qml  ConnectionPage.qml  DownloadsPage.qml  IPSubnetWhitelistDialog.qml  OptionsDialog.qml  RSSPage.qml  SpeedPage.qml  UIThemeDialog.qml  WatchedFolderOptionsDialog.qml  WebUIPage.qml
src/quick/qml/properties/: ContentTab.qml  DownloadedPiecesBar.qml  GeneralTab.qml  HttpSourcesTab.qml  PeersTab.qml  PieceAvailabilityBar.qml  PropertiesPanel.qml  SpeedPlotView.qml  SpeedTab.qml  TrackersTab.qml
src/quick/qml/rss/: ArticlePreview.qml  ArticlesContextMenu.qml  ArticlesList.qml  AutomatedDownloadRulesDialog.qml  FeedsContextMenu.qml  FeedsTree.qml  MatchingArticlesPreview.qml  RSSFeedDialog.qml  RSSTab.qml  RSSToolbar.qml  RuleDefinitionPanel.qml  RulesListContextMenu.qml
src/quick/qml/search/: NewPluginUrlDialog.qml  PluginContextMenu.qml  PluginSourceDialog.qml  SearchNoPluginsPage.qml  (+5 more)
src/quick/theme/: iconprovider.cpp  iconprovider.h  thememanager.cpp  thememanager.h
(+104 files in other folders)
