# src/CMakeLists.txt — engine static library + Quick/Material executable.
# Copyright (C) 2026  qBittorrent-Material contributors
# SPDX-License-Identifier: GPL-3.0-or-later
#
# Two targets:
#   * qbt_base    — static engine library (src/base/**, the libtorrent glue).
#   * qbittorrent — the Qt Quick (Material) application; owns the single QML
#                   module (URI qBittorrent) built from src/quick/qml/**.
#
# The globs use CONFIGURE_DEPENDS so newly-added files by other feature teams
# are picked up on the next build without re-running CMake by hand. Everything
# is written to tolerate the many files that do not exist yet.

# =============================================================================
# 1) qbt_base — the engine library (src/base/**)
# =============================================================================
file(GLOB_RECURSE QBT_BASE_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/base/*.cpp"
)
# randomlayer_{win,linux,other}.cpp are #included (platform-guarded) by random.cpp,
# not compiled as standalone translation units.
list(FILTER QBT_BASE_SOURCES EXCLUDE REGEX "randomlayer_")
file(GLOB_RECURSE QBT_BASE_HEADERS CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/base/*.h"
)

# A static library needs at least one translation unit. Until the engine team
# lands its .cpp files the base glob may be empty, so always inject a tiny
# generated placeholder to keep the target valid.
set(QBT_BASE_PLACEHOLDER "${CMAKE_CURRENT_BINARY_DIR}/qbt_base_placeholder.cpp")
if (NOT EXISTS "${QBT_BASE_PLACEHOLDER}")
    file(WRITE "${QBT_BASE_PLACEHOLDER}"
        "// Auto-generated by CMake — keeps qbt_base valid when no engine\n"
        "// translation units are present yet. SPDX-License-Identifier: GPL-3.0-or-later\n"
        "namespace { [[maybe_unused]] int qbtBasePlaceholder = 0; }\n")
endif()

add_library(qbt_base STATIC
    ${QBT_BASE_SOURCES}
    ${QBT_BASE_HEADERS}
    ${QBT_BASE_PLACEHOLDER}
)

target_include_directories(qbt_base PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/base"
)

target_compile_features(qbt_base PUBLIC cxx_std_20)

target_link_libraries(qbt_base
    PUBLIC
        Qt6::Core
        Qt6::Network
        Qt6::Sql
    PRIVATE
        Qt6::Gui
        OpenSSL::SSL
        OpenSSL::Crypto
        Boost::headers
        ZLIB::ZLIB
        LibtorrentRasterbar::torrent-rasterbar
)

# Qt6::Xml is optional (only some engine parsers need it); link it if present.
find_package(Qt6 QUIET COMPONENTS Xml)
if (TARGET Qt6::Xml)
    target_link_libraries(qbt_base PUBLIC Qt6::Xml)
endif()

# Windows system libraries used by Utils::OS (SetSuspendState/ExitWindowsEx/
# AdjustTokenPrivileges for the shutdown/suspend/hibernate actions).
if (WIN32)
    target_link_libraries(qbt_base PRIVATE PowrProf Advapi32 User32)
endif()

# =============================================================================
# 2) qbittorrent — the Quick/Material executable + the single QML module
# =============================================================================

# --- C++ bridge sources (app bootstrap + quick models/controllers/theme/...) --
file(GLOB_RECURSE QBT_APP_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/app/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/app/*.h"
)
file(GLOB_RECURSE QBT_QUICK_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/*.h"
)
# The QML text files live under quick/qml — they are added via QML_FILES, not as
# C++ SOURCES, so make sure nothing under that tree leaked into the C++ globs.
list(FILTER QBT_QUICK_SOURCES EXCLUDE REGEX "/quick/qml/")

set(QBT_BRIDGE_SOURCES ${QBT_APP_SOURCES} ${QBT_QUICK_SOURCES})

# --- QML files (every screen/dialog/component/singleton) ----------------------
# Collected relative to this directory so the paths match what we hand to
# set_source_files_properties() below for the singleton flags.
file(GLOB_RECURSE QBT_QML_FILES CONFIGURE_DEPENDS
    RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/qml/*.qml"
)

qt_add_executable(qbittorrent WIN32 MACOSX_BUNDLE
    "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
)

target_include_directories(qbittorrent PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/quick"
    # The QML type-registration file (qmltyperegistrar) includes type headers by
    # BASENAME in angle brackets guarded by __has_include, so every directory
    # that declares a QML_ELEMENT/QML_SINGLETON type must be on the include path.
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/controllers"
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/models"
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/theme"
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/painteditems"
    "${CMAKE_CURRENT_SOURCE_DIR}/quick/i18n"
    "${CMAKE_CURRENT_SOURCE_DIR}/app"
)
target_compile_features(qbittorrent PRIVATE cxx_std_20)

if (QBT_DBUS AND TARGET Qt6::DBus)
    target_link_libraries(qbittorrent PRIVATE Qt6::DBus)
    target_compile_definitions(qbittorrent PRIVATE QBT_USES_DBUS)
endif()

# The QML singletons (Theme/Typography/Spacing/Icons/StateColors) must carry the
# QT_QML_SINGLETON_TYPE source property BEFORE qt_add_qml_module runs. Set it
# only for files that actually exist (tolerant of teams that have not landed).
set(QBT_QML_SINGLETONS
    quick/qml/theme/Theme.qml
    quick/qml/theme/Typography.qml
    quick/qml/theme/Spacing.qml
    quick/qml/theme/Icons.qml
    quick/qml/theme/StateColors.qml
)
foreach (_singleton IN LISTS QBT_QML_SINGLETONS)
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${_singleton}")
        set_source_files_properties("${_singleton}" PROPERTIES QT_QML_SINGLETON_TYPE TRUE)
    endif()
endforeach()

# QTP0004 NEW: auto-generate a qmldir for every subdirectory that contains QML
# files, so types under mainwindow/, dialogs/, options/, etc. are visible
# module-wide (Main.qml references them by bare name). Without this, those types
# resolve as "X is not a type".
if (POLICY QTP0004)
    qt_policy(SET QTP0004 NEW)
endif()

qt_add_qml_module(qbittorrent
    URI qBittorrent
    VERSION 1.0
    NO_PLUGIN                       # statically linked into the app binary
    QML_FILES ${QBT_QML_FILES}
    SOURCES ${QBT_BRIDGE_SOURCES}
)

target_link_libraries(qbittorrent
    PRIVATE
        qbt_base
        Qt6::Core
        Qt6::Gui
        Qt6::Qml
        Qt6::Quick
        Qt6::QuickControls2
        Qt6::Network
        Qt6::Svg
        Qt6::Sql
        Qt6::Widgets
        LibtorrentRasterbar::torrent-rasterbar
)

# =============================================================================
# 3) Binary assets (fonts, flags, tray icons, html, i18n JSON)
# =============================================================================
# Tolerant path: compile only the asset files that currently exist under
# resources/, mapped to stable classic ":/..." paths that the C++ providers
# (FlagImageProvider, font loader, FunnyTranslator catalog) rely on.
set(QBT_RES_ROOT "${CMAKE_SOURCE_DIR}/resources")

if (QBT_BUNDLE_QRC AND EXISTS "${QBT_RES_ROOT}/resources.qrc")
    # Opt-in: compile the hand-authored manifest verbatim via AUTORCC (all
    # listed files must exist or rcc will fail — hence off by default).
    target_sources(qbittorrent PRIVATE "${QBT_RES_ROOT}/resources.qrc")
    message(STATUS "qbittorrent: compiling resources/resources.qrc verbatim (QBT_BUNDLE_QRC=ON)")
else()
    set(QBT_ASSET_GLOBS
        "${QBT_RES_ROOT}/fonts/*.ttf"
        "${QBT_RES_ROOT}/fonts/*.otf"
        "${QBT_RES_ROOT}/icons/flags/*.svg"
        "${QBT_RES_ROOT}/icons/flags/*.png"
        "${QBT_RES_ROOT}/icons/tray/*.svg"
        "${QBT_RES_ROOT}/icons/tray/*.png"
        "${QBT_RES_ROOT}/icons/*.svg"
        "${QBT_RES_ROOT}/icons/*.png"
        "${QBT_RES_ROOT}/html/*.html"
        "${QBT_RES_ROOT}/html/*.css"
        "${QBT_RES_ROOT}/i18n/*.json"
    )
    file(GLOB_RECURSE QBT_ASSET_FILES CONFIGURE_DEPENDS ${QBT_ASSET_GLOBS})
    if (QBT_ASSET_FILES)
        qt_add_resources(qbittorrent "app_assets"
            PREFIX "/"
            BASE "${QBT_RES_ROOT}"
            FILES ${QBT_ASSET_FILES}
        )
        list(LENGTH QBT_ASSET_FILES _asset_count)
        message(STATUS "qbittorrent: bundled ${_asset_count} resource asset(s) from ${QBT_RES_ROOT}")
    else()
        message(STATUS "qbittorrent: no binary assets found under ${QBT_RES_ROOT} yet (continuing).")
    endif()
endif()

# =============================================================================
# 4) Install rules
# =============================================================================
install(TARGETS qbittorrent
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION bin
)
